# ustb-clock

./: .clang-format  .gitignore  Makefile.am  README.md  config.h.gch  config.h.in  configure.ac
src/: buff.c  buff.h  calc.c  calc.h  color.c  color.h  conf.h  flow.c  flow.h  main.c
src/calc/: flow.h
src/net/: http.c  http.h  socket.c  socket.h  tcp.c  tcp.h
src/sched/: task.c  task.h  watcher.c  watcher.h
src/tui/: calc.c  calc.h  clock.c  clock.h  color.c  color.h  date.c  date.h  digits.c  digits.h  draw.c  draw.h  info.c  info.h  offset.h  randmap.c  randmap.h  tui.c  tui.h
src/tui/randmap/: digitdot.c  digitdot.h
